assets/css/main.scss
---
---

/*
main.scss
==================================
*/

/*
Variables
==================================
*/

$brandColor: #ffcc3d;
$focusColor: mediumseagreen;

/*
Normalize the box model
==================================
*/

*,
*:before,
*:after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

/*
global styles
==================================
*/

html,
body {
  height: 100%;
}

/*
Typography
==================================
*/

body {
  font-family: "Avenir Next", Arial, sans-serif;
  font-weight: 400;
  font-style: normal;
  line-height: 1.6;
}

h1,
h3,
h4,
h5,
strong {
  font-family: "Avenir Next Demi", "Avenir Next", Arial, sans-serif;
  font-weight: 600;
}

.site-title {
  font-size: 1.625em;
  font-family: "Avenir Next", Arial, sans-serif;
  font-weight: normal;
  color: #919395;
  margin: 0;
  line-height: 1.2941176470588236;
  display: inline-block;
  width: 70%;
}

h2 {
  font-weight: 400;
  font-style: normal;
  font-size: 1.375em;
  margin: 1.4em 0 0 0;
}

h4 {
  font-size: 1em;
  text-transform: uppercase;
}

.page-title {
  margin-top: 0.727272727em; /* 16/22 */
}

.float-right {
  display: inline-block;
  width: 25%;
  margin: 0;
  text-align: right;
}

/*
Lists
--------------------------------
*/

.main-content ul {
  padding-left: 1.1em;
}

.main-content li {
  margin-bottom: 1em;
}

li h3,
li h4 {
  margin: 0;
}

li p {
  margin-top: 0;
}

/*
Links
==================================
*/

a,
a:link,
a:visited {
  color: #0072ce;
  border-bottom: 1px dotted #0072ce;
  text-decoration: none;
}

a:hover {
  border-bottom: 1px solid #7eb8dd;
  color: #7eb8dd;
  text-decoration: none;
}

a:active {
  border-bottom: 1px solid #002d72;
  color: #002d72;
  text-decoration: none;
}

a:focus {
  outline: 2px solid $focusColor;
  outline-offset: 3px;
  color: black;
  text-decoration: none;
}

a.title-link {
  color: #75787b;
  border-bottom: none;
}

a.skip-link {
  color: #0072ce;
  border-bottom: none;
  padding: 0.25em;
}

a.skip-link:hover,
a.skip-link:active,
a.skip-link:focus {
  background-color: $focusColor;
  color: #fff;
  border-bottom: none;
}

/*
Navigation
==================================
*/

.sidebar-nav a {
  display: block;
  padding: 10px;
}
.sidebar-nav a,
.sidebar-nav a:link,
.sidebar-nav a:visited {
  border-bottom: none;
  color: #75787b;
}
.sidebar-nav li:hover,
.sidebar-nav a:focus,
.sidebar-nav li:active,
.sidebar-nav .sidebar-nav-active {
  color: #75787b;
  border-left: 4px solid $brandColor;
  background-color: transparent;
  border-bottom: 1px solid #babbbd;
}
.sidebar-nav li:hover,
.sidebar-nav li:active,
.sidebar-nav .sidebar-nav-active {
  padding-left: 0;
}
.sidebar-nav a:focus {
  padding-left: 6px;
}
.sidebar-nav li:hover a:focus,
.sidebar-nav li:active a:focus {
  border-left: none;
  padding-left: 10px;
}
.sidebar-nav ul {
  margin: 0;
  padding: 0;
  /*border-top: 1px solid @gray-50;*/
}
.sidebar-nav li {
  list-style: none;
  border-bottom: 1px solid #babbbd;
  font-size: 1.125em;
  padding-left: 4px;
}
.sidebar-nav li:last-child {
  border-bottom: none;
}

.sub-link {
  padding-left: 30px !important;
  font-size: 1em !important;
}

/*
Layout
==================================
*/

.logo {
  display: block;
}

.content {
  padding-top: 2em;
  padding-bottom: 2em;
}

/* offset the fixed position header for jump links */
section:before {
  display: block;
  content: "";
  height: 60px;
  margin: -60px 0 0;
}

.wrap {
  max-width: 1200px;
  margin: 0 auto;
  padding-left: 20px;
  padding-right: 20px;
}

header {
  width: 100%;
  border-bottom: 4px solid $brandColor;
  background-color: #fff;
  padding: 2em 0;
}

img {
  max-width: 100%;
}

/*
Footer
==================================
*/

/* for sticky footer */
.container {
  display: table;
  height: 100%;
  width: 100%;
}

footer {
  display: table-row; /* for sticky footer */
  height: 1px; /* for sticky footer */
  border-top: 2px solid #babbbd;
  background: #f1f2f2;
  width: 100%;
  font-size: 0.875em;
}

footer .wrap {
  padding-top: 2em;
  padding-bottom: 2em;
}

/*
Helpers
==================================
*/

/* Hide from both screenreaders and browsers: h5bp.com/u */
.hidden {
  display: none !important;
  visibility: hidden;
}

/* Hide only visually, but have it available for screenreaders: h5bp.com/v */
.visuallyhidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

/* Extends the .visuallyhidden class to allow the element to be focusable
 * when navigated to via the keyboard: h5bp.com/p */
.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  width: auto;
}

/* Hide visually and from screenreaders, but maintain layout */
.invisible {
  visibility: hidden;
}

/*
Style
==================================
*/

.intro {
  color: #75787b;
}

li h4 {
  margin: 0;
}

.license {
  font-family: "Avenir Next Demi", Arial, sans-serif;
  font-weight: normal;
  font-style: normal;
}

pre {
  max-width: 100%;
  font-size: 0.875em;
  overflow-y: scroll;
  background-color: #f1f2f2;
  padding: 10px;
}

td,
th {
  border: 1px solid grey;
}
/*
Post list
----------------------------------
*/

ul.posts {
  padding: 0;
}

.posts li {
  list-style: none;
}

.post-date {
  color: #75787b;
}

/*
Repo list
----------------------------------
*/

ul.repo-list {
  margin: 0.5em 0 1em 0;
  padding: 0;
}

.repo-list li {
  list-style: none;
}

.repo-list p {
  margin: 0;
  font-size: 0.875em;
}

.repo-list h4 {
  text-transform: none;
}

/*
Helper Classes
==================================
*/

/*
Clearfix list
----------------------------------
*/

.group:before,
.group:after {
  content: " ";
  display: table;
}

.group:after {
  clear: both;
}

.group {
  *zoom: 1;
}

/*
Desktop Styles
==================================
*/

@media screen and (min-width: 45em) and (min-height: 32.5em) {
  /*
    Typography
    ==============================
    */

  /*
    Layout
    ==============================
    */

  .logo {
    max-width: 30%;
    padding-right: 20px;
    float: right;
  }

  aside {
    width: 30%;
    float: left;
  }

  .main-content {
    width: 67%;
    float: right;
    margin-bottom: 120px;
  }

  /*
    Navigation
    ==============================
    */

  /*
    Style
    ==============================
    */

  /*
    Repo list
    ------------------------------
    */

  .repo-list li {
    list-style: none;
    display: block;
    float: left;
    height: 4.0625em;
    max-height: 4.0625em;
    background-color: #e7e7e6;
    border-left: 1px solid #babbbd;
    width: 30%;
  }

  .repo-list a:link,
  .repo-list a:visited {
    display: block;
    max-height: 4.0625em;
    background-color: #e7e7e6;
    border-bottom: none;
    padding: 0.625em 1em 1em 1em;
  }

  .repo-list a:hover {
    color: #4d5f87;
    background-color: #cde3f1;
  }

  .repo-list li:first-child {
    text-align: center;
    border-left: none;
    line-height: 60px;
    padding: 0.625em 1em;
    width: 10%;
  }
}

@media screen and (max-width: 54.375em) and (min-height: 32.5em) {
  /* keep the repo list containers the same height, but account for the need for more height */

  .repo-list li {
    height: 6em;
    max-height: 6em;
  }

  .repo-list a:link,
  .repo-list a:visited {
    max-height: 6em;
  }
}

/*
Mobile Styles
==================================
*/

@media screen and (max-width: 40.5em) {
  .main-content {
    margin-top: 1.5em;
  }
}

